[package]
name = "dvd-render"
version = "0.2.4"
edition = "2024"
description = "render a sequence of terminal screens, optionally encoding them to a video file"
categories = [ "multimedia::video", "rendering::engine" ]
authors = [ "James Connolly <me@j-conn.com>" ]
license = "MPL-2.0"
repository = "https://github.com/james-conn/dvd-render"

include = [
	"/Cargo.toml",
	"/src/*.rs",
	"/src/shader.wgsl",
	"LICENSE"
]

[dependencies]
ab_glyph = "0.2"
wgpu = { version = "25", optional = true }
image = { version = "0.25", default-features = false }
gstreamer = { version = "0.23", optional = true }
gstreamer-app = { version = "0.23", optional = true }
gstreamer-video = { version = "0.23", optional = true }
gstreamer-pbutils = { version = "0.23", optional = true }

[features]
gpu = [ "dep:wgpu" ]
video = [ "dep:gstreamer", "dep:gstreamer-app", "dep:gstreamer-video", "dep:gstreamer-pbutils" ]
